# aivyx-core

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  SECURITY.md  SWOT.md  deny.toml
.cargo/: config.toml
.gitea/workflows/: ci.yml  mirror.yml
.github/workflows/: ci.yml  codeql.yml
crates/aivyx-agent/: Cargo.toml
crates/aivyx-agent/src/: agent.rs  analysis_tools.rs  built_in_tools.rs  compression.rs  cost_tracker.rs  data_tools.rs  digest.rs  document_tools.rs  federation_tools.rs  filesystem_tools.rs  infrastructure_tools.rs  lib.rs  memory_extractor.rs  network_tools.rs  nexus_tools.rs  persona.rs  plugin_tools.rs  profile.rs  rate_limiter.rs  reflection.rs  sanitize.rs  search_tools.rs  self_tools.rs  session.rs  session_store.rs  skill_loader.rs  vcs_tools.rs  web_tools.rs
crates/aivyx-audit/: Cargo.toml
crates/aivyx-audit/benches/: hmac_chain.rs
crates/aivyx-audit/src/: abuse.rs  event.rs  export.rs  lib.rs  log.rs  metrics.rs  retention.rs  search.rs  sink.rs
crates/aivyx-audit/tests/: fuzz_audit.rs  proptest_audit.rs
crates/aivyx-capability/: Cargo.toml
crates/aivyx-capability/src/: lib.rs  pattern.rs  scope.rs  set.rs  token.rs
crates/aivyx-config/: Cargo.toml
crates/aivyx-config/src/: autonomy_policy.rs  cache.rs  channel.rs  config.rs  dirs.rs  embedding.rs  heartbeat.rs  lib.rs  mcp.rs  memory.rs  nexus.rs  otel.rs  plugin.rs  project.rs  provider.rs  routing.rs  schedule.rs  server.rs  skill.rs  smtp.rs  speech.rs
crates/aivyx-config/tests/: fuzz_config.rs
crates/aivyx-core/: Cargo.toml
crates/aivyx-core/benches/: a2a_serialize.rs
crates/aivyx-core/src/: a2a.rs  autonomy.rs  cache.rs  error.rs  id.rs  lib.rs  principal.rs  progress.rs  scope.rs  storage.rs  task_status.rs  tool_registry.rs  traits.rs
crates/aivyx-core/tests/: fuzz_a2a.rs  proptest_ids.rs
crates/aivyx-crypto/: Cargo.toml
crates/aivyx-crypto/benches/: encrypt_decrypt.rs
crates/aivyx-crypto/src/: kdf.rs  lib.rs  master_key.rs  secret.rs  store.rs
crates/aivyx-crypto/tests/: proptest_crypto.rs
crates/aivyx-federation/: Cargo.toml
crates/aivyx-federation/src/: auth.rs  client.rs  config.rs  lib.rs  relay.rs  types.rs
crates/aivyx-llm/: Cargo.toml
crates/aivyx-llm/src/: cache.rs  circuit_breaker.rs  classifier.rs  claude.rs  embedding.rs  factory.rs  lib.rs  message.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  resilient.rs  routing.rs  stt.rs  stt_ollama.rs  stt_openai.rs  tts.rs  tts_edge.rs  tts_openai.rs
crates/aivyx-llm/tests/: fuzz_messages.rs
crates/aivyx-mcp/: Cargo.toml
crates/aivyx-mcp/src/: auth.rs  cache.rs  client.rs  lib.rs  pool.rs  protocol.rs  proxy.rs  streamable.rs  transport.rs
crates/aivyx-mcp/tests/: fuzz_mcp.rs
crates/aivyx-memory/: Cargo.toml
crates/aivyx-memory/benches/: vector_search.rs
crates/aivyx-memory/src/: consolidation.rs  graph.rs  lib.rs  manager.rs  notification.rs  outcome.rs  pattern.rs  profile.rs  profile_extractor.rs  retrieval.rs  search.rs  store.rs  tools.rs  types.rs
crates/aivyx-nexus/: Cargo.toml
crates/aivyx-nexus/src/: feed.rs  lib.rs  redact.rs  relay.rs  reputation.rs  store.rs  types.rs
crates/aivyx-task/: Cargo.toml
crates/aivyx-task/src/: lib.rs  progress.rs  runner.rs  status.rs  step.rs  store.rs  task.rs
hooks/: pre-commit  pre-push
