[package]
name = "aivyx-agent"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-llm = { workspace = true }
aivyx-capability = { workspace = true }
aivyx-audit = { workspace = true }
aivyx-config = { workspace = true }
aivyx-crypto = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
html2text = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
csv = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
calamine = { workspace = true, optional = true }
pdf-extract = { workspace = true, optional = true }
plotters = { workspace = true, optional = true }
tera = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
hex = { workspace = true }
scraper = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
diffy = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
aivyx-memory = { workspace = true, optional = true }
aivyx-mcp = { workspace = true, optional = true }
aivyx-federation = { workspace = true, optional = true }
aivyx-nexus = { workspace = true, optional = true }

[features]
default = ["memory", "mcp", "document-tools", "network-tools", "infrastructure-tools"]
memory = ["dep:aivyx-memory"]
mcp = ["dep:aivyx-mcp"]
federation = ["dep:aivyx-federation"]
nexus = ["dep:aivyx-nexus"]
document-tools = ["dep:calamine", "dep:pdf-extract", "dep:plotters", "dep:tera", "dep:pulldown-cmark"]
network-tools = ["dep:scraper", "dep:lettre"]
infrastructure-tools = ["dep:rusqlite", "dep:zip", "dep:tar", "dep:flate2", "dep:diffy"]
