[package]
name = "aivyx-audit"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hmac_chain"
harness = false
