[package]
name = "aivyx-config"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-crypto = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

croner = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
