[package]
name = "aivyx-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "a2a_serialize"
harness = false
