[package]
name = "aivyx-federation"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chacha20poly1305 = { workspace = true }
