[package]
name = "aivyx-llm"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-config = { workspace = true }
aivyx-crypto = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
