[package]
name = "aivyx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for the aivyx agent framework"

[dependencies]
aivyx-core = { workspace = true }
aivyx-config = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
serde_json = { workspace = true }
