[package]
name = "aivyx-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-crypto = { workspace = true }
aivyx-llm = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "vector_search"
harness = false
