[package]
name = "aivyx-task"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-crypto = { workspace = true }
aivyx-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
